fix uemobility Set in fromMap and change containsUserLocation